[flake8]
max-line-length = 125

[bdist_wheel]
universal = 0

[metadata]
name = test-pypy-performance
description = test-pypy-performance
license = GPL-3
author = Hiroshi Miura
author_email = miurahr@linux.com

[options]
setup_requires =
      setuptools-scm>=3.5.0
      setuptools>=42.0
      wheel
      pep517

[options.extras_require]
test =
      pytest
      pytest-benchmark
