[metadata]
name = bench-hash-performance
version = 1.0.0
description = bench hash performance
license = GPL-3
author = Hiroshi Miura
author_email = miurahr@linux.com

[options]
setup_requires =
      setuptools>=42.0
      wheel

[options.extras_require]
test =
      pytest
      pytest-benchmark
      pytest-profiling
